# cairo

./: .gitignore  LICENSE.md  Makefile  README.md  TODO.md  build.hs  color.hs  commit.hs  display.hs  generate-cairo.cabal  generate.cabal  rgb2hsv.hs  run.hs  stack.yaml
scripts/: rgb2hsv.hs
src/: Colors.hs  Main.hs
