name:                generate
version:             0.1.1.0
synopsis:            cairo generated graphics
homepage:            http://github.com/joelelmercarlson/cairo#README.md
license:             MIT
license-file:        LICENSE.md
author:              Joel E Carlson
maintainer:          joel.elmer.carlson@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Colors
  other-modules:
  build-depends:       base
                     , cairo
                     , colour
  default-language:    Haskell2010

executable Main
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:  Colors
  build-depends:  base
                  , cairo
                  , colour
                  , hsnoise
                  , linear
                  , MonadRandom
                  , mtl
                  , time
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/joelelmercarlson/cairo.git
